// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withSafeArea renders correctly 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
/>
`;

exports[`withSafeArea renders correctly 2`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "bottom": 4,
        "left": 2,
        "right": 3,
        "top": 1,
      }
    }
  />
</RNCSafeAreaProvider>
`;
